src/rust/dcmfx_cli/tests/snapshots/modify__with_crop_mr_brucker.dcm_50,50,300,200_after.snap
---
source: dcmfx_cli/tests/modify.rs
expression: get_stdout(assert)
snapshot_kind: text
---
(0002,0001) OB File Meta Information Version        [     2 bytes] [00 01]
(0002,0002) UI Media Storage SOP Class UID          [    28 bytes] "1.2.840 … (Enhanced MR Image Storage)
(0002,0003) UI Media Storage SOP Instance UID       [    46 bytes] "2.16.756.5 …
(0002,0010) UI Transfer Syntax UID                  [    20 bytes] "1.2.840 … (Explicit VR Little Endian)
(0002,0012) UI Implementation Class UID             [    32 bytes] "1.2.826.0. …
(0002,0013) SH Implementation Version Name          [    10 bytes] "DCMfx Test"
(0008,0005) CS Specific Character Set               [    10 bytes] "ISO_IR 192"
(0008,0008) CS Image Type                           [    34 bytes] "ORIGINAL", …
(0008,0012) DA Instance Creation Date               [     8 bytes] 2015-05-22
(0008,0013) TM Instance Creation Time               [     6 bytes] 09:04:06
(0008,0016) UI SOP Class UID                        [    28 bytes] "1.2.840 … (Enhanced MR Image Storage)
(0008,0018) UI SOP Instance UID                     [    46 bytes] "2.16.756.5 …
(0008,0020) DA Study Date                           [     8 bytes] 2013-07-11
(0008,0021) DA Series Date                          [     8 bytes] 2013-07-11
(0008,0023) DA Content Date                         [     8 bytes] 2013-07-11
(0008,002A) DT Acquisition DateTime                 [    20 bytes] 2013-07-11T …
(0008,0030) TM Study Time                           [     6 bytes] 17:00:13
(0008,0031) TM Series Time                          [     6 bytes] 23:17:00
(0008,0033) TM Content Time                         [     6 bytes] 16:17:00
(0008,0050) SH Accession Number                     [     0 bytes] ""
(0008,0060) CS Modality                             [     2 bytes] "MR" (Magnetic Resonance)
(0008,0070) LO Manufacturer                         [    24 bytes] "Bruker Bio …
(0008,0080) LO Institution Name                     [    12 bytes] "Mayo Clinic"
(0008,0090) PN Referring Physician's Name           [     0 bytes] ""
(0008,0201) SH Timezone Offset From UTC             [     6 bytes] "+0200"
(0008,1090) LO Manufacturer's Model Name            [     6 bytes] "700WB"
(0008,9121) SQ Referenced Raw Data Sequence
  (FFFE,E000) Item
    (0008,1115) SQ Referenced Series Sequence
      (FFFE,E000) Item
        (0008,1199) SQ Referenced SOP Sequence
          (FFFE,E000) Item
            (0008,1150) UI Referenced SOP Class UID             [    26 bytes] "1.2.840 … (Raw Data Storage)
            (0008,1155) UI Referenced SOP Instance UID          [    50 bytes] "2.16.75 …
          (FFFE,E00D) Item Delimitation Item
        (FFFE,E0DD) Sequence Delimitation Item
        (0020,000E) UI Series Instance UID                  [    44 bytes] "2.16.75 …
      (FFFE,E00D) Item Delimitation Item
    (FFFE,E0DD) Sequence Delimitation Item
    (0020,000D) UI Study Instance UID                   [    48 bytes] "2.16.75 …
  (FFFE,E00D) Item Delimitation Item
(FFFE,E0DD) Sequence Delimitation Item
(0008,9205) CS Pixel Presentation                   [    10 bytes] "MONOCHROME"
(0008,9206) CS Volumetric Properties                [     6 bytes] "VOLUME"
(0008,9207) CS Volume Based Calculation Technique   [     4 bytes] "NONE"
(0008,9208) CS Complex Image Component              [    10 bytes] "MAGNITUDE"
(0008,9209) CS Acquisition Contrast                 [     8 bytes] "UNKNOWN"
(0010,0010) PN Patient's Name                       [     6 bytes] "H13885"
(0010,0020) LO Patient ID                           [    10 bytes] "H13885_9M"
(0010,0030) DA Patient's Birth Date                 [     0 bytes] ""
(0010,0040) CS Patient's Sex                        [     2 bytes] "F" (Female)
(0010,1030) DS Patient's Weight                     [     2 bytes] "5"
(0010,2201) LO Patient Species Description          [     8 bytes] "PRIMATE"
(0010,2210) CS Anatomical Orientation Type          [     6 bytes] "BIPED"
(0010,2292) LO Patient Breed Description            [     0 bytes] ""
(0010,2293) SQ Patient Breed Code Sequence
(FFFE,E0DD) Sequence Delimitation Item
(0010,2294) SQ Breed Registration Sequence
(FFFE,E0DD) Sequence Delimitation Item
(0010,2297) PN Responsible Person                   [     0 bytes] ""
(0010,2299) LO Responsible Organization             [    12 bytes] "Mayo Clinic"
(0018,0023) CS MR Acquisition Type                  [     2 bytes] "2D"
(0018,0087) DS Magnetic Field Strength              [    12 bytes] "16.44882942"
(0018,1020) LO Software Versions                    [    42 bytes] "ParaVision …
(0018,1030) LO Protocol Name                        [     6 bytes] "PKD_MT"
(0018,5100) CS Patient Position                     [     4 bytes] "HFS" (Head First-Supine)
(0018,9004) CS Content Qualification                [     8 bytes] "RESEARCH"
(0018,9005) SH Pulse Sequence Name                  [    12 bytes] "FLASH (pvm)"
(0018,9008) CS Echo Pulse Sequence                  [     8 bytes] "GRADIENT"
(0018,9011) CS Multiple Spin Echo                   [     2 bytes] "NO"
(0018,9012) CS Multi-planar Excitation              [     2 bytes] "NO"
(0018,9014) CS Phase Contrast                       [     2 bytes] "NO"
(0018,9017) CS Steady State Pulse Sequence          [    12 bytes] "LONGITUDIN …
(0018,9018) CS Echo Planar Pulse Sequence           [     2 bytes] "NO"
(0018,9024) CS Saturation Recovery                  [     2 bytes] "NO"
(0018,9025) CS Spectrally Selected Suppression      [     4 bytes] "FAT"
(0018,9029) CS Oversampling Phase                   [     4 bytes] "NONE"
(0018,9032) CS Geometry of k-Space Traversal        [    12 bytes] "RECTILINEAR"
(0018,9064) CS k-space Filtering                    [     4 bytes] "NONE"
(0018,9073) FD Acquisition Duration                 [     8 bytes] 555.836
(0018,9093) US Number of k-Space Trajectories       [     2 bytes] 1
(0018,9100) CS Resonant Nucleus                     [     2 bytes] "1H"
(0018,9174) CS Applicable Safety Standard Agency    [     4 bytes] "IEC"
(0020,000D) UI Study Instance UID                   [    48 bytes] "2.16.756.5 …
(0020,000E) UI Series Instance UID                  [    44 bytes] "2.16.756.5 …
(0020,0010) SH Study ID                             [     4 bytes] "PKD"
(0020,0011) IS Series Number                        [     6 bytes] "40001"
(0020,0013) IS Instance Number                      [     2 bytes] "1"
(0020,0052) UI Frame of Reference UID               [    46 bytes] "2.16.756.5 …
(0020,1040) LO Position Reference Indicator         [     0 bytes] ""
(0020,9221) SQ Dimension Organization Sequence
  (FFFE,E000) Item
    (0020,9164) UI Dimension Organization UID           [    44 bytes] "2.16.75 …
  (FFFE,E00D) Item Delimitation Item
(FFFE,E0DD) Sequence Delimitation Item
(0020,9222) SQ Dimension Index Sequence
  (FFFE,E000) Item
    (0020,9164) UI Dimension Organization UID           [    44 bytes] "2.16.75 …
    (0020,9165) AT Dimension Index Pointer              [     4 bytes] (0020,90 …
    (0020,9167) AT Functional Group Pointer             [     4 bytes] (0020,91 …
  (FFFE,E00D) Item Delimitation Item
  (FFFE,E000) Item
    (0020,9164) UI Dimension Organization UID           [    44 bytes] "2.16.75 …
    (0020,9165) AT Dimension Index Pointer              [     4 bytes] (0020,90 …
    (0020,9167) AT Functional Group Pointer             [     4 bytes] (0020,91 …
  (FFFE,E00D) Item Delimitation Item
(FFFE,E0DD) Sequence Delimitation Item
(0028,0002) US Samples per Pixel                    [     2 bytes] 1
(0028,0004) CS Photometric Interpretation           [    12 bytes] "MONOCHROME2"
(0028,0008) IS Number of Frames                     [     2 bytes] "4"
(0028,0010) US Rows                                 [     2 bytes] 78
(0028,0011) US Columns                              [     2 bytes] 206
(0028,0100) US Bits Allocated                       [     2 bytes] 16
(0028,0101) US Bits Stored                          [     2 bytes] 16
(0028,0102) US High Bit                             [     2 bytes] 15
(0028,0103) US Pixel Representation                 [     2 bytes] 1
(0028,0106) SS Smallest Image Pixel Value           [     2 bytes] 1
(0028,0107) SS Largest Image Pixel Value            [     2 bytes] 32767
(0040,0555) SQ Acquisition Context Sequence
(FFFE,E0DD) Sequence Delimitation Item
(5200,9229) SQ Shared Functional Groups Sequence
  (FFFE,E000) Item
    (0018,9006) SQ MR Imaging Modifier Sequence
      (FFFE,E000) Item
        (0018,0095) DS Pixel Bandwidth                      [    12 bytes] "465.029 …
        (0018,9020) CS Magnetization Transfer               [    14 bytes] "OFF_RES …
        (0018,9022) CS Blood Signal Nulling                 [     2 bytes] "NO"
        (0018,9028) CS Tagging                              [     4 bytes] "NONE"
        (0018,9098) FD Transmitter Frequency                [     8 bytes] 700.3253 …
      (FFFE,E00D) Item Delimitation Item
    (FFFE,E0DD) Sequence Delimitation Item
    (0018,9042) SQ MR Receive Coil Sequence
      (FFFE,E000) Item
        (0018,1250) SH Receive Coil Name                    [     8 bytes] "unknown"
        (0018,9041) LO Receive Coil Manufacturer Name       [     0 bytes] ""
        (0018,9043) CS Receive Coil Type                    [     4 bytes] "BODY"
        (0018,9044) CS Quadrature Receive Coil              [     2 bytes] "NO"
      (FFFE,E00D) Item Delimitation Item
    (FFFE,E0DD) Sequence Delimitation Item
    (0018,9049) SQ MR Transmit Coil Sequence
      (FFFE,E000) Item
        (0018,1251) SH Transmit Coil Name                   [     8 bytes] "unknown"
        (0018,9050) LO Transmit Coil Manufacturer Name      [     0 bytes] ""
        (0018,9051) CS Transmit Coil Type                   [     4 bytes] "BODY"
      (FFFE,E00D) Item Delimitation Item
    (FFFE,E0DD) Sequence Delimitation Item
    (0018,9112) SQ MR Timing and Related Parameters Sequence
      (FFFE,E000) Item
        (0018,0080) DS Repetition Time                      [    12 bytes] "361.872 …
        (0018,0091) IS Echo Train Length                    [     2 bytes] "1"
        (0018,1314) DS Flip Angle                           [     2 bytes] "15"
        (0018,9240) US RF Echo Train Length                 [     2 bytes] 1
      (FFFE,E00D) Item Delimitation Item
    (FFFE,E0DD) Sequence Delimitation Item
    (0018,9114) SQ MR Echo Sequence
      (FFFE,E000) Item
        (0018,9082) FD Effective Echo Time                  [     8 bytes] 2.3652
      (FFFE,E00D) Item Delimitation Item
    (FFFE,E0DD) Sequence Delimitation Item
    (0018,9115) SQ MR Modifier Sequence
      (FFFE,E000) Item
        (0018,9009) CS Inversion Recovery                   [     2 bytes] "NO"
        (0018,9010) CS Flow Compensation                    [     4 bytes] "NONE"
        (0018,9016) CS Spoiling                             [     8 bytes] "GRADIENT"
        (0018,9021) CS T2 Preparation                       [     2 bytes] "NO"
        (0018,9026) CS Spectrally Selected Excitation       [     4 bytes] "NONE"
        (0018,9027) CS Spatial Pre-saturation               [     4 bytes] "NONE"
        (0018,9077) CS Parallel Acquisition                 [     2 bytes] "NO"
        (0018,9081) CS Partial Fourier                      [     2 bytes] "NO"
      (FFFE,E00D) Item Delimitation Item
    (FFFE,E0DD) Sequence Delimitation Item
    (0018,9119) SQ MR Averages Sequence
      (FFFE,E000) Item
        (0018,0083) DS Number of Averages                   [     2 bytes] "16"
      (FFFE,E00D) Item Delimitation Item
    (FFFE,E0DD) Sequence Delimitation Item
    (0018,9125) SQ MR FOV/Geometry Sequence
      (FFFE,E000) Item
        (0018,0093) DS Percent Sampling                     [     2 bytes] "75"
        (0018,0094) DS Percent Phase Field of View          [     4 bytes] "100"
        (0018,1312) CS In-plane Phase Encoding Direction    [     6 bytes] "COLUMN"
        (0018,9058) US MR Acquisition Frequency Encoding Steps  [     2 bytes] 128
        (0018,9231) US MR Acquisition Phase Encoding Steps in-plane  [     2 bytes] 96
      (FFFE,E00D) Item Delimitation Item
    (FFFE,E0DD) Sequence Delimitation Item
    (0018,9226) SQ MR Image Frame Type Sequence
      (FFFE,E000) Item
        (0008,9007) CS Frame Type                           [    34 bytes] "ORIGINA …
        (0008,9205) CS Pixel Presentation                   [    10 bytes] "MONOCHR …
        (0008,9206) CS Volumetric Properties                [     6 bytes] "VOLUME"
        (0008,9207) CS Volume Based Calculation Technique   [     4 bytes] "NONE"
        (0008,9208) CS Complex Image Component              [    10 bytes] "MAGNITU …
        (0008,9209) CS Acquisition Contrast                 [     8 bytes] "UNKNOWN"
      (FFFE,E00D) Item Delimitation Item
    (FFFE,E0DD) Sequence Delimitation Item
    (0020,9071) SQ Frame Anatomy Sequence
      (FFFE,E000) Item
        (0008,2218) SQ Anatomic Region Sequence
          (FFFE,E000) Item
            (0008,0100) SH Code Value                           [     8 bytes] "T-D0010"
            (0008,0102) SH Coding Scheme Designator             [     4 bytes] "SRT"
            (0008,0103) SH Coding Scheme Version                [     8 bytes] "20091021"
            (0008,0104) LO Code Meaning                         [    12 bytes] "Entire  …
          (FFFE,E00D) Item Delimitation Item
        (FFFE,E0DD) Sequence Delimitation Item
        (0020,9072) CS Frame Laterality                     [     2 bytes] "U"
      (FFFE,E00D) Item Delimitation Item
    (FFFE,E0DD) Sequence Delimitation Item
    (0020,9116) SQ Plane Orientation Sequence
      (FFFE,E000) Item
        (0020,0037) DS Image Orientation (Patient)          [    26 bytes] "1", "0" …
      (FFFE,E00D) Item Delimitation Item
    (FFFE,E0DD) Sequence Delimitation Item
    (0028,9110) SQ Pixel Measures Sequence
      (FFFE,E000) Item
        (0018,0050) DS Slice Thickness                      [     2 bytes] "1"
        (0028,0030) DS Pixel Spacing                        [     8 bytes] "0.2", " …
      (FFFE,E00D) Item Delimitation Item
    (FFFE,E0DD) Sequence Delimitation Item
    (0028,9145) SQ Pixel Value Transformation Sequence
      (FFFE,E000) Item
        (0028,1052) DS Rescale Intercept                    [     2 bytes] "0"
        (0028,1053) DS Rescale Slope                        [     2 bytes] "1"
        (0028,1054) LO Rescale Type                         [     2 bytes] "US"
      (FFFE,E00D) Item Delimitation Item
    (FFFE,E0DD) Sequence Delimitation Item
  (FFFE,E00D) Item Delimitation Item
(FFFE,E0DD) Sequence Delimitation Item
(5200,9230) SQ Per-Frame Functional Groups Sequence
  (FFFE,E000) Item
    (0020,9111) SQ Frame Content Sequence
      (FFFE,E000) Item
        (0020,9056) SH Stack ID                             [     2 bytes] "1"
        (0020,9057) UL In-Stack Position Number             [     4 bytes] 1
        (0020,9128) UL Temporal Position Index              [     4 bytes] 1
        (0020,9156) US Frame Acquisition Number             [     2 bytes] 1
        (0020,9157) UL Dimension Index Values               [     8 bytes] 1, 1
      (FFFE,E00D) Item Delimitation Item
    (FFFE,E0DD) Sequence Delimitation Item
    (0020,9113) SQ Plane Position Sequence
      (FFFE,E000) Item
        (0020,0032) DS Image Position (Patient)             [    14 bytes] "-14", " …
      (FFFE,E00D) Item Delimitation Item
    (FFFE,E0DD) Sequence Delimitation Item
  (FFFE,E00D) Item Delimitation Item
  (FFFE,E000) Item
    (0020,9111) SQ Frame Content Sequence
      (FFFE,E000) Item
        (0020,9056) SH Stack ID                             [     2 bytes] "1"
        (0020,9057) UL In-Stack Position Number             [     4 bytes] 2
        (0020,9128) UL Temporal Position Index              [     4 bytes] 1
        (0020,9156) US Frame Acquisition Number             [     2 bytes] 2
        (0020,9157) UL Dimension Index Values               [     8 bytes] 1, 2
      (FFFE,E00D) Item Delimitation Item
    (FFFE,E0DD) Sequence Delimitation Item
    (0020,9113) SQ Plane Position Sequence
      (FFFE,E000) Item
        (0020,0032) DS Image Position (Patient)             [    14 bytes] "-14", " …
      (FFFE,E00D) Item Delimitation Item
    (FFFE,E0DD) Sequence Delimitation Item
  (FFFE,E00D) Item Delimitation Item
  (FFFE,E000) Item
    (0020,9111) SQ Frame Content Sequence
      (FFFE,E000) Item
        (0020,9056) SH Stack ID                             [     2 bytes] "1"
        (0020,9057) UL In-Stack Position Number             [     4 bytes] 3
        (0020,9128) UL Temporal Position Index              [     4 bytes] 1
        (0020,9156) US Frame Acquisition Number             [     2 bytes] 3
        (0020,9157) UL Dimension Index Values               [     8 bytes] 1, 3
      (FFFE,E00D) Item Delimitation Item
    (FFFE,E0DD) Sequence Delimitation Item
    (0020,9113) SQ Plane Position Sequence
      (FFFE,E000) Item
        (0020,0032) DS Image Position (Patient)             [    14 bytes] "-14", " …
      (FFFE,E00D) Item Delimitation Item
    (FFFE,E0DD) Sequence Delimitation Item
  (FFFE,E00D) Item Delimitation Item
  (FFFE,E000) Item
    (0020,9111) SQ Frame Content Sequence
      (FFFE,E000) Item
        (0020,9056) SH Stack ID                             [     2 bytes] "1"
        (0020,9057) UL In-Stack Position Number             [     4 bytes] 4
        (0020,9128) UL Temporal Position Index              [     4 bytes] 1
        (0020,9156) US Frame Acquisition Number             [     2 bytes] 4
        (0020,9157) UL Dimension Index Values               [     8 bytes] 1, 4
      (FFFE,E00D) Item Delimitation Item
    (FFFE,E0DD) Sequence Delimitation Item
    (0020,9113) SQ Plane Position Sequence
      (FFFE,E000) Item
        (0020,0032) DS Image Position (Patient)             [    14 bytes] "-14", " …
      (FFFE,E00D) Item Delimitation Item
    (FFFE,E0DD) Sequence Delimitation Item
  (FFFE,E00D) Item Delimitation Item
(FFFE,E0DD) Sequence Delimitation Item
(7FE0,0010) OW Pixel Data                           [128544 bytes] [17 0D 77 1 …
